# tauri-scaffold

./: .eslintrc.js  README.md  package.json  tsconfig.json
.github/workflows/: nodejs.yml
mock/: server.js
src/: App.css  App.jsx  App.test.tsx  App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src/api/: index.ts
src/config/: index.js
src/layouts/: BasicLayout.jsx
src/pages/: HomePage.jsx
