[package]
name = "unknown-project"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "unknown-project"
edition = "2018"
build = "src/build.rs"

[dependencies]
async-std = "1.6.2"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.8", features = [ "all-api" ] }
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "unknown-project"
path = "src/main.rs"
