[package]
name = "my-project"
version = "0.1.0"
description = "A Tauri App"
authors = [ "himself65" ]
license = ""
repository = ""
default-run = "unknown-project"
edition = "2018"
build = "src/build.rs"

[dependencies]
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.8", features = [ "all-api" ] }
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
tokio = { version = "0.2", features = [ "full" ] }
log = "0.4.11"
env_logger = "0.7.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "unknown-project"
path = "src/main.rs"
